--- a/CE3001-lab2/regfile_summary.html
+++ b/CE3001-lab2/regfile_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>regfile Project Status (09/12/2024 - 13:41:50)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>regfile Project Status (09/12/2024 - 13:41:39)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>CE3001-lab2.xise</TD>
@@ -107,8 +107,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/FPGA/SC3050-lab2/CE3001-lab2\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu 12. Sep 13:48:58 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/12/2024 - 13:41:50</center>
+<br><center><b>Date Generated:</b> 09/12/2024 - 17:00:30</center>
 </BODY></HTML>
